introdução aos if
#se 5 for igual a 15/3 imprima "horray"
#lembrar-se de usar espacamento 
#if condição:
    #codigo da condição
if 5 == 15/3: #usar dois pontos para dizer que se fazer sentido continuar
    print ("Hooray!")
    Hooray!
#provocação falsa para provocar nenhuma exibição
if 5 == 18/3: #usar dois pontos para dizer que se fazer sentido continuar
    print ("Hooray!")
   
#!= representa diferente
if 5 != 3*6:
    print("olá")
    olá
    
#COMPARANDO COM ELSE IF : atribuindo valor a variável e testando casos diferentes
x=1 
if x>3:
 print ("case 1")
if x<=3:
 print ("case 2")
 
#atribuindo valor com else if de uma forma mais eficiente 
x=1 
if x>3:
    print ("case 1")
else:
    print ("case 2")
case 2 

#atentar-se a identação pois observe o erro com else alinhado fora do if 
x=1 
if x>3:
    print ("case 1")
    else:
    print ("case 2")
    ^
SyntaxError: invalid syntax

#COMANDO ELIF "ELSE IF ABREVIADO"
# DEF = DEFINITION de uma função  - DEFINIÇÃO DE UMA VARIÁVEL COMO SE FOSSE UM DATA X NO SAS.
# ATENTAR-SE A ORDEM DOS FATORES POIS PODE MODIFICAR O VALOR FINAL
def compare_to_five(y):
    if y > 5:
        return "Greater"
    elif y < 0:
        return "Negative"
    elif y < 5: #else if "caso não"
        return "Less"
    else:
        return "Equal"
        
  print (compare_to_five(10)) #atrubuindo 10 como valor de y 
  Greater
  
  print (compare_to_five(3))
  Less
  
  print (compare_to_five(5))
  Equal
  
  print (compare_to_five(-3))
  Negative
  
  # ATENTAR-SE A ORDEM DOS FATORES POIS PODE MODIFICAR O VALOR FINAL
  
# if else 

x = 2 
if x > 4: 
    print ("correct")
else:
    print ("incorrect")
    
 
 
 
#SOLUCIONANDO OS EXERCÍCIOS 

## Introduction to the IF statement

Create a two-line code that prints "The condition has been satisfied" if 5 is greater than 2.

if 5 > 2:
    print ("The Condition has been Satisfied")
    The Condition has been Satisfied

Assign 10 to the variable x and 25 to the variable y. In the same cell, create 2 conditional statements. Let the first one print "Both conditions are correct" if x is greater then 3 and y is greater than 13. Let the second one print "At least one of the conditions is false" if x is less than or equal to 3 or y is less than or equal to 13. 
Change the values assigned to x and y and re-run the cell to verify your code still works.

x=10
y=25

if x > 3 and y > 13:
    print ("Both Conditions are Correct")
    
if x <= 3 or y <= 13:
    print ("At least one of the conditions is false")

if x <= 40 or y <= 40:
    print ("At least one of the conditions is false")
    
Both Conditions are Correct
At least one of the conditions is false


Assign 200 to x.  
Create the following piece of code:
If x > 200, print out "Big"; 
If x > 100 and x <= 200, print out "Average"; 
and If x <= 100, print out "Small".
Use the If, Elif, and Else keywords in your code.

#atribuindo 200 a x

x= 200

#criando o código solicitado no enunciado usando apenas if, elif e else

if x > 200:
    print ("Big")
elif x > 100 and x <= 200:
    print ("Average")
else: 
    print ("Small")
Average


Keep the first two conditions of the previous code. Add a new ELIF statement, so that, eventually, the program prints "Small" if x >= 0 and x <= 100, and "Negative" if x < 0. 
Let x carry the value of 50 and then of -50 to check if your code is correct.

#atribuindo 50 a x

x= 50

#criando o código solicitado no enunciado usando apenas if, elif e else

if x > 200:
    print ("Big")
elif x > 100 and x <= 200:
    print ("Average")
elif x >= 0 and x <=100: #Novo elseif solicitado no enunciado 
    print ("Small")
else: 
    print ("Negative")

small

#atribuindo -50 a x

x= -50

#criando o código solicitado no enunciado usando apenas if, elif e else

if x > 200:
    print ("Big")
elif x > 100 and x <= 200:
    print ("Average")
elif x >= 0 and x <=100:
    print ("Small")
else: 
    print ("Negative")
negative

